--- a/Styles/main.css
+++ b/Styles/main.css
@@ -44,3 +44,8 @@
 body {
     background-color: #F8FAFC;
 }
+
+.btn:active {
+    background-color: var(--theme-primary);
+    color: var(--theme-white);
+}
