--- a/Styles/main.css
+++ b/Styles/main.css
@@ -41,11 +41,23 @@
     color: var(--theme-stroke);
 }
 
-body {
-    background-color: #F8FAFC;
+.bg-primary {
+    background-color: var(--theme-primary);
 }
 
-.btn:active {
-    background-color: var(--theme-primary);
+body {
+    /* background-color: #F8FAFC; */
+}
+
+#rejected-no-jobs-found-container, #interview-no-jobs-found-container {
+    padding-inline: 40px;
+    text-align: center;
+}
+
+* {
+    transition: 300ms ease-in-out;
+}
+
+.job-btn:hover {
     color: var(--theme-white);
 }
